@@ -1,4 +1,4 @@
 DIST FoxitReader-1.1.0.tar.bz2 3787587 RMD160 bce49dcc467fc8060d4bb213cfeb3a064ccf64f1 SHA1 7de9de0886c9196d93e6c51efe81681163d5038a SHA256 02f1ad5ad2fd516754254f349c94b8e81b57b9eb2a0315f30debdc5d7fb8dbf4
-EBUILD foxitreader-1.1.0.ebuild 1079 RMD160 cc2f15bf117c1b48b2bd917ce5659e4cd249a437 SHA1 49ff41768aa365a4a2f90e66b7187632d35f8bb1 SHA256 af45704a1997c28bd0709da21b7706628223e8eda15df50c4d9ae32fd421ba94
-MISC ChangeLog 371 RMD160 5d9b1a8a7c9f504cd4d9f6b1b4adc78cc413dc8a SHA1 7fece84a4566d76a680704ea69d0cc9eaa2911a5 SHA256 8d1079e07bc0fc2468c7a5af752b97b1eef4dd461db9ebb6b7d1463229a23402
+EBUILD foxitreader-1.1.0.ebuild 907 RMD160 63dbf2fa5b3acca2ec4b6088acdad7be4fe382af SHA1 27578504da50f988a7af5deaad85db68d5a14b67 SHA256 76dadfffaf21695f6acc2fdd001b90494344fee5765a60eaa80f7b3ec8b69b67
+MISC ChangeLog 485 RMD160 15c94576025b7d8bd0a61c70fac634084e1e2c7e SHA1 de56c03d5a2cf14f9da89c3e3ab10ed73385a225 SHA256 9548c50c1400e5340fca6554364f759ab42f55cb3f2e5b0a21188917f9107c85
 MISC metadata.xml 530 RMD160 fa7605a7a9979af2af49db7c9f5be55b65140c73 SHA1 1e3430b5461456dac65f03d52473693273e5e48e SHA256 ad5d16c0ecb82f503d99ba30135e44b0fc925bbc46d3632851f8103935051f43
