@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  foxitreader-1.1.0.ebuild:
+  fix depend and test it in x86
+
   27 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
   fix depend, tnx kflirik@gentoo.ru
 
